--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/ju/Downloads/hsqldb-2.7.4/hsqldb/lib/hsqldb.jar">
+	<classpathentry exported="true" kind="lib" path="/home/ju/Downloads/hsqldb-2.7.4/hsqldb/lib/hsqldb.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
